添加个人介绍，更改分类

--- a/themes/material/_config.yaml
+++ b/themes/material/_config.yaml
@@ -20,7 +20,7 @@ head:
 url:
     rss:
     daily_pic: "#"
-    logo: "#"
+    logo: "/about"
 
 
 # ---------------------------------------------------------------
