--- a/themes/material/_config.yaml
+++ b/themes/material/_config.yaml
@@ -73,7 +73,7 @@ img:
     logo: "/img/big.jpg"
     avatar: "/img/big.jpg"
     daily_pic: "/img/daily_pic.png"
-    sidebar_header: "/img/sidebar_header.png"
+    sidebar_header: "http://opqksc9nz.bkt.clouddn.com/sidebar.jpg"
     random_thumbnail: "/img/random/material-"
     footer_image:
         #upyun_logo:
@@ -210,8 +210,11 @@ comment:
 # Available value:
 #     swiftype | google | local
 search:
-    use: google
+    use: local
     swiftype_key:
+# search:
+#    path: search.xml
+#    field: all
 
 # Analytics Systems
 # Available value:
@@ -233,3 +236,8 @@ busuanzi:
     all_site_uv: false
     post_pv: false
     busuanzi_pure_mini_js: "https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"
+
+# ---------------------------------------------------------------
+# Customer Settings
+# ---------------------------------------------------------------
+
