--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.5.0"
   },
   "dependencies": {
+    "ejs": "^2.6.1",
     "hexo": "^3.2.0",
     "hexo-deployer-git": "^0.3.1",
     "hexo-generator-archive": "^0.1.4",
