--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ theme: material
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: root@39.107.124.144:/var/repo/Michael-Zhang-Xian-Sen.github.io
+  repo: https://github.com/Michael-Zhang-Xian-Sen/Michael-Zhang-Xian-Sen.github.io
   branch: master
 
 jsonContent: 
